<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">PFIJava</string>
    -- Page de bienvenue
    <string name="AM_Bienvenue">MARCHER.online</string>
    <string name="AM_PlaceholderNom">Nom</string>
    <string name="AM_PlaceholderPass">Mot de passe</string>
    <string name="AM_BtnLogin">Se Connecter</string>
    <string name="errorLogin">"Le nom d'utilisateur ou le mot de passe est invalide. Veuiller recommencer."</string>
    <string name="achatTitre">"Panier"</string>

    -- Liste Epicerie
    <string name="LE_titre" tools:ignore="ExtraTranslation">Marché</string>

    -- Panier
    <string name="achat_txtPrixTotal">Prix Total</string>
    <string name="achat_btnViderPanier">Annuler</string>
    <string name="achat_btnAchatPanier">Paiement</string>
    <string name="poursuivre_achats">Poursuivre Mes Achats</string>
    <string name="voirPanier">Voir Panier</string>
    <string name="PA_toast_paniervide">Veuillez ajouter un ou des articles au panier afin de valider votre commande</string>

    <string name="VA_titre">Votre Commande</string>
    <string name="VA_btnRetour">Retour au marché</string>
    <string name="Com_txtConfirmation">Merci pour votre achat !</string>


    -- Page Description Articles
    <string name="DA_PlaceholderNbArticle">1</string>
    <string name="DA_AjouterUnArticle">+</string>
    <string name="DA_RetirerUnArticle">-</string>
    <string name="DA_AjouterAuPanier">Ajouter au panier</string>
    <string name="DA_DescriptionImage">Image de l\'article</string>

    <string name="DA_Btn_annuler">Annuler</string>
    <string name="DA_Toast_quantite">Veuillez saisir une quantité pour pursuivre</string>

    <string name="DA_Retour">Retour</string>


    --Description des viws
    <string name="LE_descBtnPlayPause">Bouton qui fait jouer ou pause la musique</string>

    -- Description des articles
    <string name="articleDesc_banane">\"Des bananes jaunes et sucrées, riches en potassium et parfaites comme collation saine\" (Lieu: Equateur, Ferme: Tropicale Delicioso)\"</string>
    <string name="articleDesc_cerise">\"Des cerises rouges juteuses, idéales pour les desserts ou simplement à déguster telles quelles\" (Lieu: France, Ferme: Rouge Sucré)\"</string>
    <string name="articleDesc_chou">\"Un chou vert et croquant, parfait pour les salades ou les plats sautés\" (Lieu: Canada, Ferme: Croquante Canadienne)\"</string>
    <string name="articleDesc_champignon">\"Des champignons frais et savoureux, parfaits pour ajouter de la saveur à de nombreux plats\" (Lieu: USA, Ferme: ChampiFrais)\"</string>
    <string name="articleDesc_courgette">\"Des courgettes vertes et croquantes, parfaites pour les plats grillés ou en sauté\" (Lieu: Espagne, Ferme: Verte Espagnole)\"</string>
    <string name="articleDesc_epinard">\"Des épinards verts riches en fer, parfaits pour les smoothies ou en accompagnement\" (Lieu: France, Ferme: Feuille Verte Française)\"</string>
    <string name="articleDesc_mais">\"Des épis de maïs jaunes et sucrés, parfaits pour les grillades d\'été ou comme accompagnement\" (Lieu: USA, Ferme: Dorée Américaine)\"</string>
    <string name="articleDesc_orange">\"Des oranges juteuses pleines de vitamine C, parfaites pour les jus ou à déguster en fruit\" (Lieu: Espagne, Ferme: Jus d\'Orange Espagnole)\"</string>
    <string name="articleDesc_pois">\"Des pois verts et sucrés, parfaits pour accompagner de nombreux plats ou en salade\" (Lieu: France, Ferme: Petit Pois Français)\"</string>
    <string name="articleDesc_raisin">\"Des raisins juteux, parfaits pour les collations ou à ajouter dans les salades de fruits\" (Lieu: Italie, Ferme: Raisin Sucré Italien)\"</string>
    <string name="title_activity_panier">Panier</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>